bug: add max-width to site origin display to avoid layout issue

--- a/src/ui/views/ConnectedSites/style.less
+++ b/src/ui/views/ConnectedSites/style.less
@@ -108,6 +108,7 @@
                     display: block;
                 }
                 .site-origin {
+                    max-width: 200px;
                     margin-left: 12px;
                     font-family: 'Montserrat';
                     font-style: normal;
